--- a/103_ShowCase/Base.lproj/Main.storyboard
+++ b/103_ShowCase/Base.lproj/Main.storyboard
@@ -20,27 +20,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dyj-eD-Yul">
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vl0-S4-uZN">
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="128" id="bLh-30-Tz3"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
                                 <color key="backgroundColor" red="0.95504480600357056" green="0.31766349077224731" blue="0.11978312581777573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="vl0-S4-uZN" firstAttribute="top" secondItem="Dyj-eD-Yul" secondAttribute="topMargin" constant="40" id="Djo-U5-wJo"/>
-                                    <constraint firstItem="vl0-S4-uZN" firstAttribute="leading" secondItem="Dyj-eD-Yul" secondAttribute="leadingMargin" id="TmO-dC-rc5"/>
                                     <constraint firstAttribute="height" constant="120" id="WS0-t6-gnv"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="vl0-S4-uZN" secondAttribute="trailing" id="usj-b7-w9O"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AL1-cb-6FG" customClass="MaterialView" customModule="_03_ShowCase" customModuleProvider="target">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Glk-wj-nrw"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="AL1-cb-6FG" secondAttribute="trailing" id="NVY-qM-tbr"/>
                             <constraint firstItem="Dyj-eD-Yul" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="UC3-JV-883"/>
                             <constraint firstAttribute="trailing" secondItem="Dyj-eD-Yul" secondAttribute="trailing" id="WtU-TY-2dc"/>
+                            <constraint firstItem="AL1-cb-6FG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="aC1-BJ-fSr"/>
+                            <constraint firstItem="AL1-cb-6FG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="60" id="ps8-MN-dDc"/>
                             <constraint firstItem="Dyj-eD-Yul" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uSB-FV-WLw"/>
                         </constraints>
                     </view>
